--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -77,12 +77,12 @@
         }
     @media screen and (min-width: 768px){
             display: flex;
-            flex-basis: calc(100% / 2 - 30px);
+            flex-basis: calc((100% - 30px) / 2));
             flex-direction: column;
             //width: 354px;
         }
     @media screen and (min-width: 768px){
-            flex-basis: calc(100% / 3 - 30px);   
+            flex-basis: calc((100% - 60px) / 3);   
         } 
 }
 .portfolio-link{
