--- a/css/main.css
+++ b/css/main.css
@@ -1343,14 +1343,14 @@ svg {
 @media screen and (min-width: 768px) {
   .portfolio-block {
     display: flex;
-    flex-basis: calc(100% / 2 - 30px);
+    flex-basis: calc((100% - 30px) / 2);
     flex-direction: column;
   }
 }
 
 @media screen and (min-width: 768px) {
   .portfolio-block {
-    flex-basis: calc(100% / 3 - 30px);
+    flex-basis: calc((100% - 60px) / 3);
   }
 }
 
