--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -77,7 +77,7 @@
         }
     @media screen and (min-width: 768px){
             display: flex;
-            flex-basis: calc((100% - 30px) / 2));
+            flex-basis: calc((100% - 30px) / 2);
             flex-direction: column;
             //width: 354px;
         }
