--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -62,12 +62,15 @@
 
 .contacts {
     display: none;
-    margin-left: auto;
+    
     @media screen and (min-width: 768px){
         display: block;
+        margin-left: 84px;
+
     }
      @media screen and (min-width: 1200px){
         display: flex;
+        margin-left: auto;
     }
 
 
