--- a/css/main.css
+++ b/css/main.css
@@ -398,18 +398,19 @@ svg {
 
 .contacts {
   display: none;
-  margin-left: auto;
 }
 
 @media screen and (min-width: 768px) {
   .contacts {
     display: block;
+    margin-left: 84px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .contacts {
     display: flex;
+    margin-left: auto;
   }
 }
 
@@ -595,26 +596,37 @@ svg {
 
 @media screen and (min-width: 1200px) {
   .hero {
-    padding-bottom: 200px;
-    padding-top: 200px;
+    padding: 200px 0;
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 320px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 320px), (min-resolution: 192dpi) and (min-width: 320px), (min-resolution: 2dppx) and (min-width: 320px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 480px), screen and (min-resolution: 192dpi) and (min-width: 480px), screen and (min-resolution: 2dppx) and (min-width: 480px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imeges/mobile/bg-main.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/mobile/bg-main@2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imeges/tablet/bg-main.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/tablet/bg-main.jpg);
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), (-webkit-min-device-pixel-ratio: 2) and (min-width: 1200px), (min-resolution: 192dpi) and (min-width: 1200px), (min-resolution: 2dppx) and (min-width: 1200px) {
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px), screen and (min-resolution: 192dpi) and (min-width: 768px), screen and (min-resolution: 2dppx) and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../imeges/deckstope/bg-main.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/tablet/bg-main@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/deckstope/bg-main.jpg);
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1200px), screen and (min-resolution: 192dpi) and (min-width: 1200px), screen and (min-resolution: 2dppx) and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../imeges/deckstope/bg-main@2x.jpg);
   }
 }
 
@@ -765,7 +777,6 @@ svg {
 
 .we-do {
   padding-bottom: 94px;
-  padding-top: 50px;
   display: none;
 }
 
@@ -934,15 +945,15 @@ svg {
   margin: auto;
 }
 
+.team-pic {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .client-section {
   padding-top: 120px;
   padding-bottom: 60px;
-}
-
-@media screen and (min-width: 1200px) {
-  .client-section {
-    margin-bottom: 94px;
-  }
 }
 
 .client-section-name {
@@ -958,7 +969,6 @@ svg {
 
 @media screen and (min-width: 1200px) {
   .client-section-name {
-    margin-top: 50px;
     font-size: 33px;
   }
 }
@@ -970,6 +980,7 @@ svg {
   margin-top: -30px;
   margin-left: -30px;
   justify-content: center;
+  flex-basis: calc((100% - 60px) / 2);
 }
 
 @media screen and (min-width: 1200px) {
@@ -988,7 +999,7 @@ svg {
   border-radius: 4px;
   align-items: center;
   justify-content: center;
-  margin-right: 30px;
+  margin-left: 30px;
   color: #AFB1B8;
 }
 
@@ -1008,7 +1019,6 @@ svg {
   width: 100%;
   height: 92px;
   margin-top: 30px;
-  margin-left: 30px;
   flex-basis: calc((100% - 60px) / 2);
 }
 
@@ -1021,12 +1031,13 @@ svg {
 @media screen and (min-width: 1200px) {
   .client-logo-box {
     width: 170px;
-    margin-bottom: 94px;
   }
 }
 
 .client-logo-svg {
   fill: currentColor;
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
@@ -1038,7 +1049,6 @@ svg {
 
 .adress-list {
   margin-top: 20px;
-  margin-bottom: 60px;
 }
 
 .adress-on-map {
@@ -1128,12 +1138,13 @@ svg {
 }
 
 .footer-social-list-link {
-  margin-bottom: 60px;
+  margin-top: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .footer-social-list-link {
-    margin-right: auto;
+    margin-left: auto;
+    margin-top: 0;
   }
 }
 
@@ -1175,12 +1186,27 @@ svg {
   .footer-form-blok {
     margin-left: auto;
     margin-right: auto;
+    margin-top: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form-blok {
+    margin-top: auto;
   }
 }
 
 .footer-form {
   display: flex;
   flex-wrap: nowrap;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form {
+    flex-direction: row;
+  }
 }
 
 .footer-email-input {
@@ -1196,15 +1222,10 @@ svg {
   margin-bottom: 20px;
 }
 
-@media screen and (min-width: 768px) {
-  .footer-email-input {
-    width: 354px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .footer-email-input {
     flex-wrap: nowrap;
+    width: 354px;
   }
 }
 
@@ -1248,19 +1269,6 @@ svg {
   margin-top: 13px;
   margin-bottom: 13px;
   transform: translateY(-50%);
-}
-
-@media screen and (min-width: 768px) {
-  .footer-adres-block {
-    margin-left: auto;
-    margin-right: 165px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer-adres-block {
-    margin-right: auto;
-  }
 }
 
 .portfolio-main-section {
@@ -1417,5 +1425,10 @@ svg {
 .team-list-wraper {
   position: relative;
   overflow: hidden;
+}
+
+.portfolio-pic {
+  width: 100%;
+  height: auto;
 }
 /*# sourceMappingURL=main.css.map */
