--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -2,7 +2,7 @@
     padding-top: 120px;
     padding-bottom: 60px;
     @media screen and (min-width: 1200px) {
-        margin-bottom: 94px;
+        //margin-bottom: 94px;
     }
 }
 
@@ -16,7 +16,6 @@
     letter-spacing: 0.03em;
     margin-bottom: 30px;
      @media screen and (min-width: 1200px) {
-        margin-top: 50px;
         font-size: 33px;
     }
 }
@@ -28,6 +27,7 @@
     margin-top: -30px;
     margin-left: -30px; 
     justify-content: center;
+    flex-basis: calc((100% - 60px) / 2);
          @media screen and (min-width: 1200px) {
             flex-wrap: nowrap;
          }
@@ -44,7 +44,7 @@
     border-radius: 4px;
     align-items: center;
     justify-content: center;
-    margin-right: 30px;
+    margin-left: 30px;
     color:  #AFB1B8;
 
         & svg:hover,
@@ -65,14 +65,12 @@
   width: 100%;
   height: 92px;
   margin-top: 30px;
-  margin-left: 30px;
   flex-basis: calc((100% - 60px) / 2);
     @media screen and (min-width: 768px) {
         flex-basis: calc((100% - 90px) / 3);
     }
     @media screen and (min-width: 1200px) {
         width: 170px;
-        margin-bottom: 94px;
     }
 }
 
@@ -80,4 +78,6 @@
 
 .client-logo-svg{   
     fill: currentColor;
+    width: 100%;
+    height: 100%;
 }
