--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,16 +3,11 @@
     display: flex;
     padding: 60px auto 60px auto ;
     background-color: #2F303A;
-    flex-wrap: nowrap;
-    
-    
+    flex-wrap: nowrap; 
 }
 
 .adress-list{
     margin-top: 20px;
-    margin-bottom: 60px;
-    
-    
 }
 
 .adress-on-map {
@@ -24,10 +19,10 @@
     letter-spacing: 0.03em;
     color: #FFFFFF;
     margin-top: 10px;
-     justify-content: center;
-     @media screen and (min-width: 1200px){
+    justify-content: center;
+        @media screen and (min-width: 1200px){
         justify-content: left;       
-     }
+        }
 }
 
 .mail-footer {
@@ -85,12 +80,13 @@
      }
 }
 .footer-social-list-link{
-    //margin-left: 70px;
-    margin-bottom: 60px;
+    margin-top: 60px;
     @media screen and (min-width: 768px){
-               margin-right: auto;
+               margin-left: auto;
+               margin-top: 0;
            }
 }
+
 .footer-link-logo{
     fill: #FFFFFF;
     width: 20px;
@@ -109,8 +105,9 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-top: 12px ;
-    
+
 }
+
 .social-list-link-box{
     display: flex;
     align-items: center;
@@ -135,15 +132,23 @@
     @media screen and (min-width: 768px){
                margin-left: auto;
                margin-right: auto;
-           }
-    //margin-left: auto;
+               margin-top: 60px;
+    }           
+    @media screen and (min-width: 1200px){
+                margin-top: auto;
+    }
 
-  
 }
 
 .footer-form{
     display: flex;
     flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (min-width: 1200px){
+              flex-direction: row ;
+    }
+
        
 }
 .footer-email-input{
@@ -158,11 +163,12 @@
     color: #FFFFFF;
     margin-bottom: 20px;
         @media screen and (min-width: 768px){
-        width: 354px;
+        // 
         //margin-left: 94px;
         }
         @media screen and (min-width: 1200px){
             flex-wrap: nowrap;
+            width: 354px;
         }
 }
 
@@ -208,13 +214,14 @@
 
 }
 
-.footer-adres-block {
-           @media screen and (min-width: 768px){
-               margin-left: auto;
-               margin-right: 165px;
-           }
-           @media screen and (min-width: 1200px){
-            margin-right: auto;
-            }
+// .footer-adres-block {
+//            @media screen and (min-width: 768px){
+//                margin-left: auto;
+//                margin-right: 165px;
+//            }
 
-}
+//            @media screen and (min-width: 1200px){
+//             margin-right: auto;
+//             }
+
+// }
