--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -2,7 +2,9 @@
     padding-top: 120px;
     padding-bottom: 60px;
     @media screen and (min-width: 1200px) {
-        //margin-bottom: 94px;
+        padding-top: 94px;
+        padding-bottom: 94px;
+
     }
 }
 
@@ -17,6 +19,7 @@
     margin-bottom: 30px;
      @media screen and (min-width: 1200px) {
         font-size: 33px;
+         margin-bottom: 50px;
     }
 }
 
