--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -65,7 +65,7 @@
     
     @media screen and (min-width: 768px){
         display: block;
-        margin-left: 84px;
+        margin-left: auto;
 
     }
      @media screen and (min-width: 1200px){
@@ -85,7 +85,7 @@
     letter-spacing: 0.02em;
     color: var(--names-adress-discriptions);
     margin-left: 10px;
-    margin-top: 10px;
+   
 
 
         &:hover,
@@ -98,11 +98,13 @@
 }
 
 .header__contact-object{
-    margin-top: 10px;
-
+    margin-left: 0px;
+@media screen and (min-width: 1200px){
+        
     &:not(:last-child) {
     margin-right: 50px;
     }
+}
 }
 
 .header {
@@ -194,9 +196,9 @@
 .navigation-mobile__menu:not(:last-child){
     padding-bottom: 32px;
 }
+
 .mobil-menu__contact{
-    padding-left: 40px;
-    margin-top: 302px;
+    margin-left: 40px;
 }
 .mobile-menu__contact-item-tell{
     font-family: Roboto;
@@ -246,3 +248,19 @@
     margin-left: 10px;
 }
 
+.conteiner-mob-x{
+    position: relative;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+
+}
+.mobile-top-part{
+   
+}
+
+.mobile-bottom-part{
+    margin-top: 30vh;
+
+}
