--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -22,6 +22,11 @@
     flex-wrap: wrap;
     @media screen and (min-width: 768px){
           justify-content: center;
+
+     }
+     @media screen and (min-width: 768px){
+            margin-bottom: 34px;
+
      }
 }
 
